--- a/index.html
+++ b/index.html
@@ -53,7 +53,89 @@
                     <p class="info-description">Los Angeles, USA</p>
                 </div>
             </div>
+        </section>
 
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti repellendus vero quod ut fugiat! Debitis.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Dicta fuga iusto nulla, aspernatur dignissimos repellendus libero. At ipsam autem exercitationem commodi, nihil aperiam.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Quia quas magnam illum ea possimus provident consequatur nisi, enim iste, quos eos incidunt corrupti.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Et, cupiditate quo pariatur distinctio, mollitia rem, laborum quae veniam porro dicta eaque nesciunt sit?</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="section-title">A sumamry of my Resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr> 
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr> 
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="subtitle">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr> 
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
 
     </main>
